manifests/stg/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-20240206
spec:
  selector:
    matchLabels:
      app: api-20240206
  replicas: 1
  template:
    metadata:
      labels:
        app: api-20240206
    spec:
      imagePullSecrets:
        - name: artifact-registry
      containers:
      - name: api-20240206
        image: "asia-northeast1-docker.pkg.dev/node-api-400701/node-api/go122-api:4779a2bb8f9cab6b1087d385f53c1f9ec3af9f47"
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: api-20240206-service
  labels:
    app: api-20240206-service
spec:
  selector:
    app: api-20240206
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-20240206-ingress
spec:
  ingressClassName: "nginx"
  rules:
  - http:
      paths:
      - path: /stg
        pathType: Prefix
        backend:
          service:
            name: api-20240206-service
            port:
              number: 80
