manifests/stg/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-20240206-ingress
spec:
  ingressClassName: "nginx"
  rules:
    - http:
        paths:
          - path: /stg
            pathType: Prefix
            backend:
              service:
                name: api-20240206-service
                port:
                  number: 80
